Whitespace fix 2

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   max-height: 1100px;
   justify-content: center;
-  padding-top: 30vh;
+  padding-top: 37vh;
 }
 
 .hero-container h3 {
